--- a/static/css/global/global_desktop.css
+++ b/static/css/global/global_desktop.css
@@ -1,3 +1,19 @@
+/* SCROLLBAR */
+
+body::-webkit-scrollbar {
+  width: 13px;
+}
+
+body::-webkit-scrollbar-track {
+  background: var(--base_color);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: var(--main_color);
+  border-radius: 20px;
+  border: 3px solid var(--base_color);
+}
+
 /* HEADER */
 
 .head {
