--- a/static/css/home/home_desktop.css
+++ b/static/css/home/home_desktop.css
@@ -38,17 +38,3 @@
 .div_search {
   min-height: 78vh;
 }
-
-body::-webkit-scrollbar {
-  width: 13px;
-}
-
-body::-webkit-scrollbar-track {
-  background: var(--base_color);
-}
-
-body::-webkit-scrollbar-thumb {
-  background-color: var(--main_color);
-  border-radius: 20px;
-  border: 3px solid var(--base_color);
-}
